--- a/WinFormsCatamaran/WinFormsCatamaran.csproj
+++ b/WinFormsCatamaran/WinFormsCatamaran.csproj
@@ -47,13 +47,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boat.cs" />
-    <Compile Include="FormParking.cs">
+    <Compile Include="FormPort.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormParking.Designer.cs">
-      <DependentUpon>FormParking.cs</DependentUpon>
+    <Compile Include="FormPort.Designer.cs">
+      <DependentUpon>FormPort.cs</DependentUpon>
     </Compile>
-    <Compile Include="Parking.cs" />
+    <Compile Include="Port.cs" />
+    <Compile Include="PortCollection.cs" />
     <Compile Include="Vehicle.cs" />
     <Compile Include="Catamaran.cs" />
     <Compile Include="Direction.cs" />
@@ -69,8 +70,8 @@
     <EmbeddedResource Include="FormCatamaran.resx">
       <DependentUpon>FormCatamaran.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormParking.resx">
-      <DependentUpon>FormParking.cs</DependentUpon>
+    <EmbeddedResource Include="FormPort.resx">
+      <DependentUpon>FormPort.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
