--- a/WinFormsCatamaran/WinFormsCatamaran.csproj
+++ b/WinFormsCatamaran/WinFormsCatamaran.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Boat.cs" />
+    <Compile Include="BoatComparer.cs" />
     <Compile Include="FormBoatConfig.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -68,6 +69,7 @@
       <DependentUpon>FormPort.cs</DependentUpon>
     </Compile>
     <Compile Include="Port.cs" />
+    <Compile Include="PortAlreadyHaveException.cs" />
     <Compile Include="PortCollection.cs" />
     <Compile Include="PortNotFoundException.cs" />
     <Compile Include="PortOverflowException.cs" />
